--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -15,7 +15,7 @@ nav {
     position: fixed;
 }
 
-ul {
+nav ul {
     display: flex;
     gap: 20px;
     list-style: none;
@@ -44,7 +44,7 @@ header {
     height: 100vh;
     background-size: cover;
     background-repeat: no-repeat;
-    background-position: ;
+    background-position: center;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -59,10 +59,10 @@ header {
 
 .button-header{
     padding: 15px 40px;
-    background-color: #ff4848;
-    color: #ffffff;
+    background-color: #ff9b29;
+    color: #222222;
     border-radius: 50px;
-    font-weight: 400;
+    font-weight: 600;
     font-size: 1.1rem;
     border: none;
 }
@@ -71,7 +71,7 @@ header {
     cursor: pointer;
     transform: scale(1.05);
     transition: 0.3s;
-    background-color: #ff6060;
+    background-color: #ffaf53;
 }
 
 section{
@@ -82,12 +82,12 @@ section{
     justify-content: center;
     align-items: center;
     text-align: start;
-    background-color: #F57C00;
+    background-color: #1b1b1b;
     height: fit-content;
 }
 
 section img{
-    width: 35%;
+    width: 45%;
 }
 
 
@@ -99,26 +99,27 @@ section img{
 
 .title-text h1{
     font-size: 2rem;
-    color: #ffa64d;
+    color: #ff9b29;
 }
 
 .news{
-    border: 1px solid #ffa64d;
+    border: 1px solid #ff9b29;
     border-radius: 50px;
     padding: 10px 30px;
     font-size: 1rem !important;
     width: min-content;
+    color: #ff9b29 !important;
 }
 
 .title-text p{
-    color: #ffa64d;
+    color: #333333;
     font-size: 1.5rem;
 }
 
 .about{
     width: 100%;
     height: fit-content;
-    background-color: #eaeaea;
+    background-color: #202020;
     display: flex;
     flex-direction: row;
     gap: 20px;
@@ -134,11 +135,13 @@ section img{
     display: flex;
     flex-direction: column;
     gap: 10px;
+   justify-content: center;
+   align-items: center;
 }
 
 .about-card-title{
     margin-bottom: 20px;
-    color: #ff6060;
+    color: #ff9b29;
 }
 
 .about-card-text{
@@ -149,18 +152,78 @@ section img{
 .about-card-button{
     padding: 10px 30px;
     border: none;
-    background-color: #ff6060;
-    color: #ffffff;
+    background-color: #ff9b29;
+    color: #202020;
     border-radius: 50px;
-    width: 200px;
+    max-width: fit-content;
+    font-weight: 600;
+}
+
+.socials{
+    display: flex;
+    gap: 20px;
+}
+
+.about-card-button-s{
+    padding: 10px 10px;
+    border: none;
+    background-color: #ffaf53;
+    color: #222222;
+    border-radius: 100px;
+    width: 60px;
+    height: 60px;
+    font-size: 1.5rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 footer{
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 400px;
-    background-color: #101720;
+    background-color: #101010;
+    flex-direction: column;
+    color: #373737;
+}
+
+footer ul{
+    list-style: none
+}
+
+.left-right{
+    width: 100%;
+    height: fit-content;
+    display: flex;
+    gap: 20px;
+    justify-content: space-around;
+    padding: 100px 0px;
+}
+
+.left{
+    display: flex;
+    gap: 20px;
+    justify-content: center;
+    align-items: center;
+}
+
+.left img{
+    height: 80px;
+}
+
+.right ul{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.copy{
+    width: 100%;
+    padding: 10px;
+    background-color: #121212;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 @media (max-width:1024px) {
@@ -174,16 +237,8 @@ footer{
 }
 
 @media (max-width:768px) {
-    nav ul{
-        display: none;
-    }
-
-    nav{
-        background-color: #e3e3e3;
-    }
-
     section{
-        padding: 20px 20px;
+        padding: 40px 20px;
     }
 
     .title-text h1{
@@ -206,11 +261,27 @@ footer{
     .about-card{
         width: 100%;
     }
+
+    .left-right{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
 }
 
 @media (max-width:480px) {
+    nav{
+        font-size: 0.7rem;
+        padding: 40px 0px;
+        justify-content: space-between;
+    }
+
+    .news{
+       display: none;
+    }
+
     section{
-        padding: 30px 10px;
+        padding: 30px 40px;
     }
 
     .title-text h1{
@@ -218,10 +289,18 @@ footer{
     }
     
     .title-text p{
-        font-size: 0.7rem;
+        font-size: 0.9rem;
     }
 
     .news{
         font-size: 0.5rem !important;
+    }
+
+    .copy{
+        font-size: 0.7rem;
+    }
+
+    .left-right{
+        padding: 40px 10px;
     }
 }
